# pdfium-poc

./: .gitignore  README.md  decision.md  settings.gradle.kts  summary.csv
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  libpdf.cpp
app/src/main/java/com/example/pdfium/poc/: CjkQuadComparator.kt  InkRoundTripTester.kt  MainActivity.kt  PdfiumCore.kt
app/src/main/res/values/: strings.xml
